--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p>Angular CDK - Drag & Drop Demo</p>
+<p>Angular CDK - Drag & Drop Demo (Vertical)</p>
 <!-- <div *ngFor = "let item of personaldetails; 
       let i = index" class = "divlayout">
       {{item.name}}
@@ -13,9 +13,53 @@
    
    <div *ngFor = "let item of personaldetails; 
       let i = index" class = "divlayout" cdkDrag>
-      {{item.name}}
+      {{ 'Id = ' +  (i+1) }}
+      <b>&nbsp;&nbsp;&nbsp;&nbsp;
+      {{' Old id = ' }}  
+      {{  item.idm === undefined ? item.id : item.idm }}
+      </b>
+      <!-- {{'Old id - ' + item.id + ' New Id - ' + (i+1) + ' ' + item.name}} -->
    </div>
 </div>
+
+
+<br>
+<p>Angular CDK - Drag & Drop (Horizontal + Vertical)</p>
+
+<div class="example-container">
+  <h2>Exam Information</h2>
+
+  <div
+    cdkDropList
+    #todoList="cdkDropList"
+    [cdkDropListData]="todo"
+    [cdkDropListConnectedTo]="[doneList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let item of todo" cdkDrag>
+      <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+      {{item}}
+    </div>
+  </div>
+</div>
+
+<div class="example-container">
+  <h2>Examiner</h2>
+
+  <div
+    cdkDropList
+    #doneList="cdkDropList"
+    [cdkDropListData]="done"
+    [cdkDropListConnectedTo]="[todoList]"
+    class="example-list"
+    (cdkDropListDropped)="drop($event)">
+    <div class="example-box" *ngFor="let item of done" cdkDrag>
+      <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
+      {{item}}
+    </div>
+  </div>
+</div>
+
 
 
 
