Changing word-old to word-previous

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       let i = index" class = "divlayout" cdkDrag>
       {{ 'Id = ' +  (i+1) }}
       <b>&nbsp;&nbsp;&nbsp;&nbsp;
-      {{' Old id = ' }}  
+      {{' Previous id = ' }}  
       {{  item.idm === undefined ? item.id : item.idm }}
       </b>
       <!-- {{'Old id - ' + item.id + ' New Id - ' + (i+1) + ' ' + item.name}} -->
