--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
 
  // Horizontal Movement
 
- .example-container {
+ .cdkclass-container {
     width: 400px;
     max-width: 100%;
     margin: 0 25px 25px 0;
@@ -16,7 +16,7 @@
     vertical-align: top;
   }
   
-  .example-list {
+  .cdkclass-list {
     border: solid 1px #ccc;
     min-height: 60px;
     background: white;
@@ -25,7 +25,7 @@
     display: block;
   }
   
-  .example-box {
+  .cdkclass-box {
     padding: 20px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
@@ -55,15 +55,15 @@
 //     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 //   }
   
-//   .example-box:last-child {
+//   .cdkclass-box:last-child {
 //     border: none;
 //   }
   
-//   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+//   .cdkclass-list.cdk-drop-list-dragging .cdkclass-box:not(.cdk-drag-placeholder) {
 //     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 //   }
 
-//   .example-custom-placeholder {
+//   .cdkclass-custom-placeholder {
 //     background: #ccc;
 //     border: dotted 3px #999;
 //     min-height: 60px;
@@ -72,7 +72,7 @@
 
 // DRAG ANIMATION
 
-// .example-list {
+// .cdkclass-list {
 //     width: 500px;
 //     max-width: 100%;
 //     border: solid 1px #ccc;
@@ -83,7 +83,7 @@
 //     overflow: hidden;
 //   }
   
-//   .example-box {
+//   .cdkclass-box {
 //     padding: 20px 10px;
 //     border-bottom: solid 1px #ccc;
 //     color: rgba(0, 0, 0, 0.87);
@@ -109,15 +109,15 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-box:last-child {
+  .cdkclass-box:last-child {
     border: none;
   }
   
-  .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  .cdkclass-list.cdk-drop-list-dragging .cdkclass-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-  .example-custom-placeholder {
+  .cdkclass-custom-placeholder {
     background: #ccc;
     border: dotted 3px #999;
     min-height: 60px;
