Enabling horizontal drag n drop functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
 
 
 <br>
-<!-- <p>Angular CDK - Drag & Drop (Horizontal + Vertical)</p>
+<p>Angular CDK - Drag & Drop (Horizontal + Vertical)</p>
 
 <div class="cdkclass-container">
   <h2>Exam Information</h2>
@@ -58,7 +58,7 @@
       {{item}}
     </div>
   </div>
-</div> -->
+</div>
 
 
 
